# clipmini_thc_mila

./: README.md  evaluate.py  pyproject.toml  train.py
clipmini/: config.py  data.py  eval.py  image_encoder.py  losses.py  text_encoder.py  utils.py  viz.py
clipmini/models/: __init__.py  image_encoder.py  text_encoder.py
pairedclip/: __init__.py  config.py  data.py  eval.py  losses.py  trainer.py
pairedclip/models/: __init__.py  clip_text_hf.py  vit_image.py
pairedclip/utils/: caption_bank.py  logging_utils.py  schedules.py
runs/final_150e/best_config/: config.json  metrics.csv
scripts/: summarize_runs.py  sweep_phase1.sh  sweep_phase2.sh
