[project]
name = "clipmini-thc-mila"
version = "0.1.0"
description = "Minimal CLIP-like image-caption alignment on paired CIFAR-100"
authors = [
    {name = "Mohammad Rezaee <mohammad.rezaee@unb.ca>"}
]
readme = "README.md"
packages = [{ include = "clipmini" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.2.0"
torchvision = "^0.17.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
transformers = "^4.41.0"
open-clip-torch = { version = "^2.24.0", optional = true }

[tool.poetry.extras]
clip = ["open-clip-torch"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
